* Fix class cast exception with provided excp method in HttpBuilder.request({})
* Remove un-necessary swagger annotation from base REST v1 model to allow more specific model descriptions in Swagger UI
* Add internal metrics for monitoring HTTP server status (internal.monitor.SERVER_THREADS, internal.monitor.SERVER_IDLE_THREADS, and internal.monitor.SERVER_QUEUE_SIZE)

*Version 3.6.4*
* Revert data source management permission to only allow creating new data sources, not give access to all data sources
* Upgrade bouncy Castle Encryption libraries to 1.62 for latest security enhancements
* Fix bug in mailing list JSON import/export
* Add back in startup time INFO log level message for data sources
* Support streaming large files into Mango for future support of point value REST api
* Ignore null values when saving point values direct to cache and otherwise
* Fix bug for point value listeners in ALWAYS mode where point value was backdated and the backdated() method was not called
* Ensure point value annotations cannot be null when saving a value to a point
* Fix missing evt context EventInstance object on active set point handlers

*Version 3.6.3*
* Disable ETag header generation for no-store web and REST requests to improve memory use and performance
* Change default env property rest.indentJSON to false as to not indent JSON on the REST api
* Validate the Publicly resolvable url system setting
* Add JMX startup extension for linux
* Add comments to debug startup extension for java 9+
* Remove quantized statistics memory improvements, to be added back in Mango 3.7

*Version 3.6.2*
* Add public getter method for points list in DataSourceWrapper from DataSourceQuery
* Improve memory use for quantized statistics, point value rollups for example use this
* Remove validation for using unit as suffix in text renderers, all renderers with units can use unit as suffix even if unit is ONE